--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-dom": "^0.14.3",
     "react-redux": "4.3.0",
     "react-router": "^2.0.1",
+    "react-sparklines": "^1.6.0",
     "redux": "^3.0.4",
+    "redux-promise": "^0.5.3",
     "youtube-api-search": "0.0.5"
   }
 }
