--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-redux": "4.3.0",
+    "react": "^15.3.1",
+    "react-addons-test-utils": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
     "react-router": "^2.0.1",
+    "react-router-dom": "^4.0.0",
     "react-sparklines": "^1.6.0",
     "redux": "^3.0.4",
+    "redux-form": "^6.0.1",
     "redux-promise": "^0.5.3",
     "youtube-api-search": "0.0.5"
   }
